syntax.output
State 5 conflicts: 1 reduce/reduce
State 21 conflicts: 12 shift/reduce, 1 reduce/reduce
State 25 conflicts: 13 reduce/reduce
State 47 conflicts: 1 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef
    3           | ExtDef ExtDefList
    4           | %empty

    5 ExtDef: Specifier ExtDecList SEMI
    6       | Specifier SEMI
    7       | Specifier FunDec CompSt

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT ID LC DefList RC
   13                | STRUCT ID

   14 VarDec: ID
   15       | VarDec LB INT RB

   16 FunDec: ID LP VarList RP
   17       | ID LP error
   18       | ID LP RP

   19 VarList: ParamDec COMMA VarList
   20        | ParamDec

   21 ParamDec: Specifier VarDec

   22 CompSt: LC StmtList RC
   23       | LC DefList StmtList RC

   24 StmtList: Stmt
   25         | Stmt StmtList
   26         | %empty

   27 Stmt: Exp SEMI
   28     | error SEMI
   29     | CompSt
   30     | RETURN Exp SEMI
   31     | RETURN Exp error
   32     | IF LP Exp RP Stmt
   33     | IF LP Exp RP Stmt ELSE Stmt
   34     | WHILE LP Exp RP Stmt

   35 DefList: Def
   36        | Def DefList
   37        | %empty

   38 Def: Specifier DecList SEMI
   39    | Specifier DecList error

   40 DecList: Dec
   41        | Dec COMMA DecList

   42 Dec: VarDec
   43    | VarDec ASSIGN Exp
   44    | VarDec ASSIGN error

   45 Exp: Exp ASSIGN Exp
   46    | Exp AND Exp
   47    | Exp OR Exp
   48    | Exp LT Exp
   49    | Exp LE Exp
   50    | Exp GT Exp
   51    | Exp GE Exp
   52    | Exp NE Exp
   53    | Exp EQ Exp
   54    | Exp PLUS Exp
   55    | Exp MINUS Exp
   56    | Exp MUL Exp
   57    | Exp DIV Exp
   58    | LP Exp RP
   59    | MINUS Exp
   60    | NOT Exp
   61    | ID LP Args RP
   62    | ID LP error
   63    | ID LP RP
   64    | Exp LB Exp RB
   65    | Exp DOT ID
   66    | ID
   67    | INT
   68    | FLOAT
   69    | CHAR

   70 Args: Exp COMMA Args
   71     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 17 28 31 39 44 62
STRUCT (258) 12 13
RETURN (259) 30 31
IF (260) 32 33
ELSE (261) 33
WHILE (262) 34
INT (263) 15 67
CHAR (264) 69
FLOAT (265) 68
TYPE (266) 10
SEMI (267) 5 6 27 28 30 38
COMMA (268) 9 19 41 70
DOT (269) 65
LC (270) 12 22 23
RC (271) 12 22 23
LB (272) 15 64
RB (273) 15 64
LP (274) 16 17 18 32 33 34 58 61 62 63
RP (275) 16 18 32 33 34 58 61 63
MUL (276) 56
DIV (277) 57
PLUS (278) 54
MINUS (279) 55 59
LT (280) 48
LE (281) 49
GT (282) 50
GE (283) 51
EQ (284) 53
NE (285) 52
AND (286) 46
OR (287) 47
NOT (288) 60
ASSIGN (289) 43 44 45
ID (290) 12 13 14 16 17 18 61 62 63 65 66


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
Program (37)
    on left: 1, on right: 0
ExtDefList (38)
    on left: 2 3 4, on right: 1 3
ExtDef (39)
    on left: 5 6 7, on right: 2 3
ExtDecList (40)
    on left: 8 9, on right: 5 9
Specifier (41)
    on left: 10 11, on right: 5 6 7 21 38 39
StructSpecifier (42)
    on left: 12 13, on right: 11
VarDec (43)
    on left: 14 15, on right: 8 9 15 21 42 43 44
FunDec (44)
    on left: 16 17 18, on right: 7
VarList (45)
    on left: 19 20, on right: 16 19
ParamDec (46)
    on left: 21, on right: 19 20
CompSt (47)
    on left: 22 23, on right: 7 29
StmtList (48)
    on left: 24 25 26, on right: 22 23 25
Stmt (49)
    on left: 27 28 29 30 31 32 33 34, on right: 24 25 32 33 34
DefList (50)
    on left: 35 36 37, on right: 12 23 36
Def (51)
    on left: 38 39, on right: 35 36
DecList (52)
    on left: 40 41, on right: 38 39 41
Dec (53)
    on left: 42 43 44, on right: 40 41
Exp (54)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 64 65 66 67 68 69, on right: 27 30 31 32 33 34 43 45 46 47 48
    49 50 51 52 53 54 55 56 57 58 59 60 64 65 70 71
Args (55)
    on left: 70 71, on right: 61 70


State 0

    0 $accept: . Program $end

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 4 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   12 StructSpecifier: STRUCT . ID LC DefList RC
   13                | STRUCT . ID

    ID  shift, and go to state 8


State 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 9


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef .
    3           | ExtDef . ExtDefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $end      reduce using rule 2 (ExtDefList)
    $end      [reduce using rule 4 (ExtDefList)]
    $default  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 10
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    5 ExtDef: Specifier . ExtDecList SEMI
    6       | Specifier . SEMI
    7       | Specifier . FunDec CompSt

    SEMI  shift, and go to state 11
    ID    shift, and go to state 12

    ExtDecList  go to state 13
    VarDec      go to state 14
    FunDec      go to state 15


State 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 8

   12 StructSpecifier: STRUCT ID . LC DefList RC
   13                | STRUCT ID .

    LC  shift, and go to state 16

    $default  reduce using rule 13 (StructSpecifier)


State 9

    0 $accept: Program $end .

    $default  accept


State 10

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 11

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


State 12

   14 VarDec: ID .
   16 FunDec: ID . LP VarList RP
   17       | ID . LP error
   18       | ID . LP RP

    LP  shift, and go to state 17

    $default  reduce using rule 14 (VarDec)


State 13

    5 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 18


State 14

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   15 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 19
    LB     shift, and go to state 20

    $default  reduce using rule 8 (ExtDecList)


State 15

    7 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 21

    CompSt  go to state 22


State 16

   12 StructSpecifier: STRUCT ID LC . DefList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 37 (DefList)

    Specifier        go to state 23
    StructSpecifier  go to state 7
    DefList          go to state 24
    Def              go to state 25


State 17

   16 FunDec: ID LP . VarList RP
   17       | ID LP . error
   18       | ID LP . RP

    error   shift, and go to state 26
    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2
    RP      shift, and go to state 27

    Specifier        go to state 28
    StructSpecifier  go to state 7
    VarList          go to state 29
    ParamDec         go to state 30


State 18

    5 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 5 (ExtDef)


State 19

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 31

    ExtDecList  go to state 32
    VarDec      go to state 14


State 20

   15 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 33


State 21

   22 CompSt: LC . StmtList RC
   23       | LC . DefList StmtList RC

    error   shift, and go to state 34
    STRUCT  shift, and go to state 1
    RETURN  shift, and go to state 35
    IF      shift, and go to state 36
    WHILE   shift, and go to state 37
    INT     shift, and go to state 38
    CHAR    shift, and go to state 39
    FLOAT   shift, and go to state 40
    TYPE    shift, and go to state 2
    LC      shift, and go to state 21
    LP      shift, and go to state 41
    MINUS   shift, and go to state 42
    NOT     shift, and go to state 43
    ID      shift, and go to state 44

    error   [reduce using rule 37 (DefList)]
    RETURN  [reduce using rule 37 (DefList)]
    IF      [reduce using rule 37 (DefList)]
    WHILE   [reduce using rule 37 (DefList)]
    INT     [reduce using rule 37 (DefList)]
    CHAR    [reduce using rule 37 (DefList)]
    FLOAT   [reduce using rule 37 (DefList)]
    LC      [reduce using rule 37 (DefList)]
    RC      reduce using rule 26 (StmtList)
    RC      [reduce using rule 37 (DefList)]
    LP      [reduce using rule 37 (DefList)]
    MINUS   [reduce using rule 37 (DefList)]
    NOT     [reduce using rule 37 (DefList)]
    ID      [reduce using rule 37 (DefList)]

    Specifier        go to state 23
    StructSpecifier  go to state 7
    CompSt           go to state 45
    StmtList         go to state 46
    Stmt             go to state 47
    DefList          go to state 48
    Def              go to state 25
    Exp              go to state 49


State 22

    7 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


State 23

   38 Def: Specifier . DecList SEMI
   39    | Specifier . DecList error

    ID  shift, and go to state 31

    VarDec   go to state 50
    DecList  go to state 51
    Dec      go to state 52


State 24

   12 StructSpecifier: STRUCT ID LC DefList . RC

    RC  shift, and go to state 53


State 25

   35 DefList: Def .
   36        | Def . DefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    error     reduce using rule 35 (DefList)
    error     [reduce using rule 37 (DefList)]
    RETURN    reduce using rule 35 (DefList)
    RETURN    [reduce using rule 37 (DefList)]
    IF        reduce using rule 35 (DefList)
    IF        [reduce using rule 37 (DefList)]
    WHILE     reduce using rule 35 (DefList)
    WHILE     [reduce using rule 37 (DefList)]
    INT       reduce using rule 35 (DefList)
    INT       [reduce using rule 37 (DefList)]
    CHAR      reduce using rule 35 (DefList)
    CHAR      [reduce using rule 37 (DefList)]
    FLOAT     reduce using rule 35 (DefList)
    FLOAT     [reduce using rule 37 (DefList)]
    LC        reduce using rule 35 (DefList)
    LC        [reduce using rule 37 (DefList)]
    RC        reduce using rule 35 (DefList)
    RC        [reduce using rule 37 (DefList)]
    LP        reduce using rule 35 (DefList)
    LP        [reduce using rule 37 (DefList)]
    MINUS     reduce using rule 35 (DefList)
    MINUS     [reduce using rule 37 (DefList)]
    NOT       reduce using rule 35 (DefList)
    NOT       [reduce using rule 37 (DefList)]
    ID        reduce using rule 35 (DefList)
    ID        [reduce using rule 37 (DefList)]
    $default  reduce using rule 35 (DefList)

    Specifier        go to state 23
    StructSpecifier  go to state 7
    DefList          go to state 54
    Def              go to state 25


State 26

   17 FunDec: ID LP error .

    $default  reduce using rule 17 (FunDec)


State 27

   18 FunDec: ID LP RP .

    $default  reduce using rule 18 (FunDec)


State 28

   21 ParamDec: Specifier . VarDec

    ID  shift, and go to state 31

    VarDec  go to state 55


State 29

   16 FunDec: ID LP VarList . RP

    RP  shift, and go to state 56


State 30

   19 VarList: ParamDec . COMMA VarList
   20        | ParamDec .

    COMMA  shift, and go to state 57

    $default  reduce using rule 20 (VarList)


State 31

   14 VarDec: ID .

    $default  reduce using rule 14 (VarDec)


State 32

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 33

   15 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 58


State 34

   28 Stmt: error . SEMI

    SEMI  shift, and go to state 59


State 35

   30 Stmt: RETURN . Exp SEMI
   31     | RETURN . Exp error

    INT    shift, and go to state 38
    CHAR   shift, and go to state 39
    FLOAT  shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    ID     shift, and go to state 44

    Exp  go to state 60


State 36

   32 Stmt: IF . LP Exp RP Stmt
   33     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 61


State 37

   34 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 62


State 38

   67 Exp: INT .

    $default  reduce using rule 67 (Exp)


State 39

   69 Exp: CHAR .

    $default  reduce using rule 69 (Exp)


State 40

   68 Exp: FLOAT .

    $default  reduce using rule 68 (Exp)


State 41

   58 Exp: LP . Exp RP

    INT    shift, and go to state 38
    CHAR   shift, and go to state 39
    FLOAT  shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    ID     shift, and go to state 44

    Exp  go to state 63


State 42

   59 Exp: MINUS . Exp

    INT    shift, and go to state 38
    CHAR   shift, and go to state 39
    FLOAT  shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    ID     shift, and go to state 44

    Exp  go to state 64


State 43

   60 Exp: NOT . Exp

    INT    shift, and go to state 38
    CHAR   shift, and go to state 39
    FLOAT  shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    ID     shift, and go to state 44

    Exp  go to state 65


State 44

   61 Exp: ID . LP Args RP
   62    | ID . LP error
   63    | ID . LP RP
   66    | ID .

    LP  shift, and go to state 66

    $default  reduce using rule 66 (Exp)


State 45

   29 Stmt: CompSt .

    $default  reduce using rule 29 (Stmt)


State 46

   22 CompSt: LC StmtList . RC

    RC  shift, and go to state 67


State 47

   24 StmtList: Stmt .
   25         | Stmt . StmtList

    error   shift, and go to state 34
    RETURN  shift, and go to state 35
    IF      shift, and go to state 36
    WHILE   shift, and go to state 37
    INT     shift, and go to state 38
    CHAR    shift, and go to state 39
    FLOAT   shift, and go to state 40
    LC      shift, and go to state 21
    LP      shift, and go to state 41
    MINUS   shift, and go to state 42
    NOT     shift, and go to state 43
    ID      shift, and go to state 44

    RC  reduce using rule 24 (StmtList)
    RC  [reduce using rule 26 (StmtList)]

    CompSt    go to state 45
    StmtList  go to state 68
    Stmt      go to state 47
    Exp       go to state 49


State 48

   23 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 34
    RETURN  shift, and go to state 35
    IF      shift, and go to state 36
    WHILE   shift, and go to state 37
    INT     shift, and go to state 38
    CHAR    shift, and go to state 39
    FLOAT   shift, and go to state 40
    LC      shift, and go to state 21
    LP      shift, and go to state 41
    MINUS   shift, and go to state 42
    NOT     shift, and go to state 43
    ID      shift, and go to state 44

    RC  reduce using rule 26 (StmtList)

    CompSt    go to state 45
    StmtList  go to state 69
    Stmt      go to state 47
    Exp       go to state 49


State 49

   27 Stmt: Exp . SEMI
   45 Exp: Exp . ASSIGN Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . LT Exp
   49    | Exp . LE Exp
   50    | Exp . GT Exp
   51    | Exp . GE Exp
   52    | Exp . NE Exp
   53    | Exp . EQ Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . MUL Exp
   57    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID

    SEMI    shift, and go to state 70
    DOT     shift, and go to state 71
    LB      shift, and go to state 72
    MUL     shift, and go to state 73
    DIV     shift, and go to state 74
    PLUS    shift, and go to state 75
    MINUS   shift, and go to state 76
    LT      shift, and go to state 77
    LE      shift, and go to state 78
    GT      shift, and go to state 79
    GE      shift, and go to state 80
    EQ      shift, and go to state 81
    NE      shift, and go to state 82
    AND     shift, and go to state 83
    OR      shift, and go to state 84
    ASSIGN  shift, and go to state 85


State 50

   15 VarDec: VarDec . LB INT RB
   42 Dec: VarDec .
   43    | VarDec . ASSIGN Exp
   44    | VarDec . ASSIGN error

    LB      shift, and go to state 20
    ASSIGN  shift, and go to state 86

    $default  reduce using rule 42 (Dec)


State 51

   38 Def: Specifier DecList . SEMI
   39    | Specifier DecList . error

    error  shift, and go to state 87
    SEMI   shift, and go to state 88


State 52

   40 DecList: Dec .
   41        | Dec . COMMA DecList

    COMMA  shift, and go to state 89

    $default  reduce using rule 40 (DecList)


State 53

   12 StructSpecifier: STRUCT ID LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 54

   36 DefList: Def DefList .

    $default  reduce using rule 36 (DefList)


State 55

   15 VarDec: VarDec . LB INT RB
   21 ParamDec: Specifier VarDec .

    LB  shift, and go to state 20

    $default  reduce using rule 21 (ParamDec)


State 56

   16 FunDec: ID LP VarList RP .

    $default  reduce using rule 16 (FunDec)


State 57

   19 VarList: ParamDec COMMA . VarList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    Specifier        go to state 28
    StructSpecifier  go to state 7
    VarList          go to state 90
    ParamDec         go to state 30


State 58

   15 VarDec: VarDec LB INT RB .

    $default  reduce using rule 15 (VarDec)


State 59

   28 Stmt: error SEMI .

    $default  reduce using rule 28 (Stmt)


State 60

   30 Stmt: RETURN Exp . SEMI
   31     | RETURN Exp . error
   45 Exp: Exp . ASSIGN Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . LT Exp
   49    | Exp . LE Exp
   50    | Exp . GT Exp
   51    | Exp . GE Exp
   52    | Exp . NE Exp
   53    | Exp . EQ Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . MUL Exp
   57    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID

    error   shift, and go to state 91
    SEMI    shift, and go to state 92
    DOT     shift, and go to state 71
    LB      shift, and go to state 72
    MUL     shift, and go to state 73
    DIV     shift, and go to state 74
    PLUS    shift, and go to state 75
    MINUS   shift, and go to state 76
    LT      shift, and go to state 77
    LE      shift, and go to state 78
    GT      shift, and go to state 79
    GE      shift, and go to state 80
    EQ      shift, and go to state 81
    NE      shift, and go to state 82
    AND     shift, and go to state 83
    OR      shift, and go to state 84
    ASSIGN  shift, and go to state 85


State 61

   32 Stmt: IF LP . Exp RP Stmt
   33     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 38
    CHAR   shift, and go to state 39
    FLOAT  shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    ID     shift, and go to state 44

    Exp  go to state 93


State 62

   34 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 38
    CHAR   shift, and go to state 39
    FLOAT  shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    ID     shift, and go to state 44

    Exp  go to state 94


State 63

   45 Exp: Exp . ASSIGN Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . LT Exp
   49    | Exp . LE Exp
   50    | Exp . GT Exp
   51    | Exp . GE Exp
   52    | Exp . NE Exp
   53    | Exp . EQ Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . MUL Exp
   57    | Exp . DIV Exp
   58    | LP Exp . RP
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID

    DOT     shift, and go to state 71
    LB      shift, and go to state 72
    RP      shift, and go to state 95
    MUL     shift, and go to state 73
    DIV     shift, and go to state 74
    PLUS    shift, and go to state 75
    MINUS   shift, and go to state 76
    LT      shift, and go to state 77
    LE      shift, and go to state 78
    GT      shift, and go to state 79
    GE      shift, and go to state 80
    EQ      shift, and go to state 81
    NE      shift, and go to state 82
    AND     shift, and go to state 83
    OR      shift, and go to state 84
    ASSIGN  shift, and go to state 85


State 64

   45 Exp: Exp . ASSIGN Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . LT Exp
   49    | Exp . LE Exp
   50    | Exp . GT Exp
   51    | Exp . GE Exp
   52    | Exp . NE Exp
   53    | Exp . EQ Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . MUL Exp
   57    | Exp . DIV Exp
   59    | MINUS Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID

    DOT  shift, and go to state 71
    LB   shift, and go to state 72
    MUL  shift, and go to state 73
    DIV  shift, and go to state 74

    $default  reduce using rule 59 (Exp)


State 65

   45 Exp: Exp . ASSIGN Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . LT Exp
   49    | Exp . LE Exp
   50    | Exp . GT Exp
   51    | Exp . GE Exp
   52    | Exp . NE Exp
   53    | Exp . EQ Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . MUL Exp
   57    | Exp . DIV Exp
   60    | NOT Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID

    DOT  shift, and go to state 71
    LB   shift, and go to state 72

    $default  reduce using rule 60 (Exp)


State 66

   61 Exp: ID LP . Args RP
   62    | ID LP . error
   63    | ID LP . RP

    error  shift, and go to state 96
    INT    shift, and go to state 38
    CHAR   shift, and go to state 39
    FLOAT  shift, and go to state 40
    LP     shift, and go to state 41
    RP     shift, and go to state 97
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    ID     shift, and go to state 44

    Exp   go to state 98
    Args  go to state 99


State 67

   22 CompSt: LC StmtList RC .

    $default  reduce using rule 22 (CompSt)


State 68

   25 StmtList: Stmt StmtList .

    $default  reduce using rule 25 (StmtList)


State 69

   23 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 100


State 70

   27 Stmt: Exp SEMI .

    $default  reduce using rule 27 (Stmt)


State 71

   65 Exp: Exp DOT . ID

    ID  shift, and go to state 101


State 72

   64 Exp: Exp LB . Exp RB

    INT    shift, and go to state 38
    CHAR   shift, and go to state 39
    FLOAT  shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    ID     shift, and go to state 44

    Exp  go to state 102


State 73

   56 Exp: Exp MUL . Exp

    INT    shift, and go to state 38
    CHAR   shift, and go to state 39
    FLOAT  shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    ID     shift, and go to state 44

    Exp  go to state 103


State 74

   57 Exp: Exp DIV . Exp

    INT    shift, and go to state 38
    CHAR   shift, and go to state 39
    FLOAT  shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    ID     shift, and go to state 44

    Exp  go to state 104


State 75

   54 Exp: Exp PLUS . Exp

    INT    shift, and go to state 38
    CHAR   shift, and go to state 39
    FLOAT  shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    ID     shift, and go to state 44

    Exp  go to state 105


State 76

   55 Exp: Exp MINUS . Exp

    INT    shift, and go to state 38
    CHAR   shift, and go to state 39
    FLOAT  shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    ID     shift, and go to state 44

    Exp  go to state 106


State 77

   48 Exp: Exp LT . Exp

    INT    shift, and go to state 38
    CHAR   shift, and go to state 39
    FLOAT  shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    ID     shift, and go to state 44

    Exp  go to state 107


State 78

   49 Exp: Exp LE . Exp

    INT    shift, and go to state 38
    CHAR   shift, and go to state 39
    FLOAT  shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    ID     shift, and go to state 44

    Exp  go to state 108


State 79

   50 Exp: Exp GT . Exp

    INT    shift, and go to state 38
    CHAR   shift, and go to state 39
    FLOAT  shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    ID     shift, and go to state 44

    Exp  go to state 109


State 80

   51 Exp: Exp GE . Exp

    INT    shift, and go to state 38
    CHAR   shift, and go to state 39
    FLOAT  shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    ID     shift, and go to state 44

    Exp  go to state 110


State 81

   53 Exp: Exp EQ . Exp

    INT    shift, and go to state 38
    CHAR   shift, and go to state 39
    FLOAT  shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    ID     shift, and go to state 44

    Exp  go to state 111


State 82

   52 Exp: Exp NE . Exp

    INT    shift, and go to state 38
    CHAR   shift, and go to state 39
    FLOAT  shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    ID     shift, and go to state 44

    Exp  go to state 112


State 83

   46 Exp: Exp AND . Exp

    INT    shift, and go to state 38
    CHAR   shift, and go to state 39
    FLOAT  shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    ID     shift, and go to state 44

    Exp  go to state 113


State 84

   47 Exp: Exp OR . Exp

    INT    shift, and go to state 38
    CHAR   shift, and go to state 39
    FLOAT  shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    ID     shift, and go to state 44

    Exp  go to state 114


State 85

   45 Exp: Exp ASSIGN . Exp

    INT    shift, and go to state 38
    CHAR   shift, and go to state 39
    FLOAT  shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    ID     shift, and go to state 44

    Exp  go to state 115


State 86

   43 Dec: VarDec ASSIGN . Exp
   44    | VarDec ASSIGN . error

    error  shift, and go to state 116
    INT    shift, and go to state 38
    CHAR   shift, and go to state 39
    FLOAT  shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    ID     shift, and go to state 44

    Exp  go to state 117


State 87

   39 Def: Specifier DecList error .

    $default  reduce using rule 39 (Def)


State 88

   38 Def: Specifier DecList SEMI .

    $default  reduce using rule 38 (Def)


State 89

   41 DecList: Dec COMMA . DecList

    ID  shift, and go to state 31

    VarDec   go to state 50
    DecList  go to state 118
    Dec      go to state 52


State 90

   19 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 19 (VarList)


State 91

   31 Stmt: RETURN Exp error .

    $default  reduce using rule 31 (Stmt)


State 92

   30 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 30 (Stmt)


State 93

   32 Stmt: IF LP Exp . RP Stmt
   33     | IF LP Exp . RP Stmt ELSE Stmt
   45 Exp: Exp . ASSIGN Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . LT Exp
   49    | Exp . LE Exp
   50    | Exp . GT Exp
   51    | Exp . GE Exp
   52    | Exp . NE Exp
   53    | Exp . EQ Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . MUL Exp
   57    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID

    DOT     shift, and go to state 71
    LB      shift, and go to state 72
    RP      shift, and go to state 119
    MUL     shift, and go to state 73
    DIV     shift, and go to state 74
    PLUS    shift, and go to state 75
    MINUS   shift, and go to state 76
    LT      shift, and go to state 77
    LE      shift, and go to state 78
    GT      shift, and go to state 79
    GE      shift, and go to state 80
    EQ      shift, and go to state 81
    NE      shift, and go to state 82
    AND     shift, and go to state 83
    OR      shift, and go to state 84
    ASSIGN  shift, and go to state 85


State 94

   34 Stmt: WHILE LP Exp . RP Stmt
   45 Exp: Exp . ASSIGN Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . LT Exp
   49    | Exp . LE Exp
   50    | Exp . GT Exp
   51    | Exp . GE Exp
   52    | Exp . NE Exp
   53    | Exp . EQ Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . MUL Exp
   57    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID

    DOT     shift, and go to state 71
    LB      shift, and go to state 72
    RP      shift, and go to state 120
    MUL     shift, and go to state 73
    DIV     shift, and go to state 74
    PLUS    shift, and go to state 75
    MINUS   shift, and go to state 76
    LT      shift, and go to state 77
    LE      shift, and go to state 78
    GT      shift, and go to state 79
    GE      shift, and go to state 80
    EQ      shift, and go to state 81
    NE      shift, and go to state 82
    AND     shift, and go to state 83
    OR      shift, and go to state 84
    ASSIGN  shift, and go to state 85


State 95

   58 Exp: LP Exp RP .

    $default  reduce using rule 58 (Exp)


State 96

   62 Exp: ID LP error .

    $default  reduce using rule 62 (Exp)


State 97

   63 Exp: ID LP RP .

    $default  reduce using rule 63 (Exp)


State 98

   45 Exp: Exp . ASSIGN Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . LT Exp
   49    | Exp . LE Exp
   50    | Exp . GT Exp
   51    | Exp . GE Exp
   52    | Exp . NE Exp
   53    | Exp . EQ Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . MUL Exp
   57    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   70 Args: Exp . COMMA Args
   71     | Exp .
